@@ -1,0 +1,4 @@
+# -*- coding: utf-8 -*-
+NAME = 'drf-querystringfilter'
+VERSION = __version__ = "1.1a0"
+__author__ = 'sax'
